<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:paddingTop="3dip"
	android:gravity="right|center_vertical">
	<ImageView
	    android:contentDescription="@string/correct"
		android:id="@+id/correct_marker"
		android:layout_width="20dip"
		android:layout_height="20dip"
		android:gravity="center"
		android:layout_marginRight="10dip" />
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22sp"
		android:gravity="right|center_vertical"
		android:textColor="@color/dark_blue"
		android:text="@string/score"
		/>
	<TextView
		android:id="@+id/score_container"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22sp"
		android:paddingLeft="10dip"
		android:textColor="@color/grey"
		android:gravity="center_vertical"
		android:text="@string/start_score"
		/>
</LinearLayout>