<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:paddingBottom="10dip"
    android:gravity="center"
    android:background="@drawable/bubble"
    >
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_margin="10dip"
    	android:text="@string/game_over"
    	android:textColor="@color/medium_blue"
    	android:textSize="25sp"
    />
    <TextView
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/your_score"
    	android:textSize="15sp"
    	android:textColor="@color/grey"
    />
    <TextView
    	android:id="@+id/game_over_score_container"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_margin="5dip"
    	android:textColor="@color/grey"
    	android:textSize="30sp"
    	android:text="@string/start_score"
    />
</LinearLayout>